# gateway/docs/swagger/clob-routes.yml
@@ -26,9 +26,8 @@ paths:
     get:
       tags:
         - 'clob'
-      summary: 'Get One or More Markets'
-      description: 'Get the information of one, several or all available markets.'
-      operationId: 'clob.markets'
+      summary: 'Get the markets for a clob'
+      operationId: 'markets'
       consumes:
         - 'application/json'
       produces:
@@ -39,21 +38,20 @@ paths:
           description: 'Request body.'
           required: true
           schema:
-            $ref: '#/definitions/SerumGetMarketsRequest'
+             $ref: '#/definitions/ClobMarketsRequest'
       responses:
         '200':
           description: 'Successful response.'
           schema:
-            $ref: '#/definitions/SerumGetMarketsResponse'
+            $ref: '#/definitions/ClobMarketResponse'
         '404':
           description: 'Not found response.'
-  /clob/orderBooks:
+  /clob/orderBook:
     get:
       tags:
         - 'clob'
-      summary: 'Get One or More Order Books'
-      description: 'Get the information of one, several or all available order books.'
-      operationId: 'clob.orderBooks'
+      summary: 'Gets orderbook for a market'
+      operationId: 'orderBook'
       consumes:
         - 'application/json'
       produces:
@@ -64,21 +62,21 @@ paths:
           description: 'Request body.'
           required: true
           schema:
-            $ref: '#/definitions/SerumGetOrderBooksRequest'
+             $ref: '#/definitions/ClobOrderbookRequest'
       responses:
         '200':
           description: 'Successful response.'
           schema:
-            $ref: '#/definitions/SerumGetOrderBooksResponse'
+            $ref: '#/definitions/ClobOrderbookResponse'
         '404':
           description: 'Not found response.'
-  /clob/tickers:
+  /clob/ticker:
     get:
       tags:
         - 'clob'
       summary: 'Get One or More Tickers'
       description: 'Get the information of one, several or all available tickers.'
-      operationId: 'clob.tickers'
+      operationId: 'tickers'
       consumes:
         - 'application/json'
       produces:
@@ -89,12 +87,12 @@ paths:
           description: 'Request body.'
           required: true
           schema:
-            $ref: '#/definitions/SerumGetTickersRequest'
+             $ref: '#/definitions/ClobTickerRequest'
       responses:
         '200':
           description: 'Successful response.'
           schema:
-            $ref: '#/definitions/SerumGetTickersResponse'
+            $ref: '#/definitions/ClobTickerResponse'
         '404':
           description: 'Not found response.'
   /clob/orders:
@@ -103,7 +101,7 @@ paths:
         - 'clob'
       summary: 'Create One Or More Orders'
       description: 'Create one or more orders.'
-      operationId: 'clob.createOrders'
+      operationId: 'postOrders'
       consumes:
         - 'application/json'
       produces:
@@ -114,12 +112,12 @@ paths:
           description: 'Request body.'
           required: true
           schema:
-            $ref: '#/definitions/SerumPostCreateOrdersRequest'
+            $ref: '#/definitions/ClobPostOrderRequest'
       responses:
         '200':
           description: 'Successful response.'
           schema:
-            $ref: '#/definitions/SerumPostCreateOrdersResponse'
+            $ref: '#/definitions/ClobPostOrderResponse'
         '400':
           description: 'Bad request response.'
     get:
@@ -127,7 +125,7 @@ paths:
         - 'clob'
       summary: 'Get One Or More Orders'
       description: 'Get the information of one, several or all orders.'
-      operationId: 'clob.getOrders'
+      operationId: 'orders'
       consumes:
         - 'application/json'
       produces:
@@ -138,12 +136,12 @@ paths:
           description: 'Request body.'
           required: true
           schema:
-            $ref: '#/definitions/SerumGetOrdersRequest'
+             $ref: '#/definitions/ClobGetOrderRequest'
       responses:
         '200':
           description: 'Successful response.'
           schema:
-            $ref: '#/definitions/SerumGetOrdersResponse'
+            $ref: '#/definitions/ClobGetOrderResponse'
         '400':
           description: 'Bad request response.'
         '404':
@@ -153,7 +151,7 @@ paths:
         - 'clob'
       summary: 'Cancel One Or More Orders Open Orders'
       description: 'Cancel one, several or all open orders.'
-      operationId: 'clob.cancelOrders'
+      operationId: 'deleteOrders'
       consumes:
         - 'application/json'
       produces:
@@ -164,12 +162,12 @@ paths:
           description: 'Request body.'
           required: true
           schema:
-            $ref: '#/definitions/SerumDeleteCancelOrdersRequest'
+            $ref: '#/definitions/ClobDeleteOrderRequest'
       responses:
         '200':
           description: 'Successful response.'
           schema:
-            $ref: '#/definitions/SerumDeleteCancelOrdersResponse'
+            $ref: '#/definitions/ClobDeleteOrderResponse'
         '400':
           description: 'Bad request response.'
         '404':
@@ -255,3 +253,23 @@ paths:
           description: 'Bad request response.'
         '404':
           description: 'Not found response.'
+  /clob/estimateGas:
+     post:
+       tags:
+         - 'clob'
+       summary: 'Estimate the total gas costs for sending an clob order'
+       operationId: 'estimateGas'
+       consumes:
+         - 'application/json'
+       produces:
+         - 'application/json'
+       parameters:
+         - in: 'body'
+           name: 'body'
+           required: true
+           schema:
+             $ref: '#/definitions/NetworkSelectionRequest'
+       responses:
+         '200':
+           schema:
+             $ref: '#/definitions/EstimateGasResponse'
